<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/realEstateCreateBtn"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/menu_title_create"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/realEstateUpdateBtnNew"
        android:icon="@drawable/ic_baseline_create_24"
        android:title="@string/menu_title_update"
        app:showAsAction="always" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/menu_title_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mapsFragment"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/menu_map"
        app:showAsAction="always" />

</menu>