<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.create.RealEstateModifier">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/linear"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.recyclerview.widget.RecyclerView>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/recyclerview">

                <Button
                    android:id="@+id/open_media"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_media_btn"
                    app:icon="@drawable/ic_baseline_add_circle_outline_24" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_realEstate_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipBackgroundColor="@color/cardview_shadow_end_color"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipHouse"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="House"
                        android:text="@string/house_chip_text">

                    </com.google.android.material.chip.Chip>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipDuplex"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="Duplex"
                        android:text="@string/duplex_chip">


                    </com.google.android.material.chip.Chip>


                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipPenthouse"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="Penthouse"
                        android:text="@string/penthouse_chip">

                    </com.google.android.material.chip.Chip>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipFlat"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="Flat"
                        android:text="@string/flat_chip">

                    </com.google.android.material.chip.Chip>


                </com.google.android.material.chip.ChipGroup>

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_realEstate_poi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleLine="true"
                    app:singleSelection="false">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/school_chip"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:tag="Ecole"
                        android:text="@string/ecole_chip" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/parc_chip"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:tag="Parc"
                        android:text="@string/parc_chip" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/station_chip"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:tag="Gare"
                        android:text="@string/gare_chip" />


                </com.google.android.material.chip.ChipGroup>














                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/property_price_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintForPrice"
                    app:helperTextEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edittext_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="8">
                    </com.google.android.material.textfield.TextInputEditText>


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/property_surface_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintForSurface">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edittext_surface"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number">

                    </com.google.android.material.textfield.TextInputEditText>


                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/property_nbroom_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintForRoomNumber">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edittext_number_room"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number">

                    </com.google.android.material.textfield.TextInputEditText>


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/property_nbbathrrom_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintForNumberBathroom">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edittext_number_bathroom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number">

                    </com.google.android.material.textfield.TextInputEditText>


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/property_nbbedroom_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintForNumberBedroom">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edittext_number_bedroom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number">

                    </com.google.android.material.textfield.TextInputEditText>


                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/property_description_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintForDescription">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edittext_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:helperTextEnabled="true">

                    </com.google.android.material.textfield.TextInputEditText>


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/property_streetnumber_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintStreetNumber">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edittext_street_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number">

                    </com.google.android.material.textfield.TextInputEditText>


                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/property_streetname_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintForStreetName">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edittext_street_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/property_postalcode_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintForZipCode">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edittext_city_zipcode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number">

                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/property_cityname_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintCityName">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edittext_city_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </com.google.android.material.textfield.TextInputEditText>


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/property_countryName_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintCountryName">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edittext_country_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="20"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="14sp"
                    android:text="@string/hintAgent"/>

                <Spinner
                    android:id="@+id/agents_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <Button
                    android:id="@+id/save_btn"
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="20sp"
                    android:drawableLeft="@drawable/ic_baseline_search_24"
                    android:text="@string/title_saveupdate_btn"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />


            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>